--- a/dev/layoutsDS/index.hbs
+++ b/dev/layoutsDS/index.hbs
@@ -35,7 +35,7 @@
 				<h1>Sam Petulla</h1>
 			</div>
 			<div class="job-title">
-				<h2>Editor, CNN Politics</h2>
+				<h2></h2>
 			</div>
 			<nav>
 				{{#each meta.nav }}
@@ -72,7 +72,7 @@
 			</section>
 
 			<section id="{{meta.nav.item2}}">
-				<h2>{{meta.sections.articles.title}}</h2>
+				<h2>{{meta.sections.articles.title}} about advertising measurement from earlier in my career</h2>
 				{{#each articles.articles }}
 					<summary class="title-and-link">
 						<a href="{{url}}">{{title}}</a>
